--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,26 +1,190 @@
-// import the base SCSS mixins, variables etc for use in all your components
 @import './styles/utils/base';
 
-// TODO: replace the following styles once you start!
+.background__app{
+  position: fixed;
+  z-index: -99;
+  display: flex;
+  width: 100%;
+  height: 100vh;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  font-family: 'Montserrat', sans-serif;
 }
 
-.App-link {
-  color: #09d3ac;
+.header{
+  width: 100%;
+  margin-top: 28px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.log-in-btn{
+  padding: 8px 28px;
+  border-radius: 5px;
+  background-color: #ffcc01;
+  border: none;
+  color: #ffffff;
+  margin-bottom: 16px;
+  margin-right: 42px;
+}
+
+.map{
+  position: relative;
+  width: 1364px;
+  height: 638px;
+}
+
+.map-img{
+  width: 100%;
+  height: 100%;
+}
+
+.jung{
+  position: absolute;
+  top: 200px;
+  right: 600px;
+  width: 27px;
+}
+.sita{
+  position: absolute;
+  top: 250px;
+  right: 650px;
+  width: 27px;
+}
+.kumar{
+  position: absolute;
+  top: 200px;
+  right: 720px;
+  width: 27px;
+}
+
+.marker-1{
+  position: absolute;
+  
+}
+
+.search-bar{
+  position: absolute;
+  top: 570px;
+  left: 350px;
+  display: flex;
+  flex-direction: column;
+  width: 657px;
+}
+
+.rotating-text{
+  opacity: 0.5;
+  position: absolute;
+  top: 55px;
+  left: 32px;
+  font-size: 24px;
+}
+
+.search-bar-label{
+  width: 100%;
+  font-size: 28px;
+  margin-bottom: 16px;
+  text-align: center;
+  margin-left:3px
+}
+.rotating-text{
+  min-width: 657px;
+  box-shadow: 0 0 15px 0 rgba(30, 136, 245, 0.9);
+  border-radius: 5px;
+  box-shadow: 0 0 15px 0 rgba(30, 136, 245, 0.9);
+  background-color: white;
+  text-indent: 16px;
+  padding: 16px 40px;
+  border: 1px solid #323232;
+}
+
+.cuisine{
+  width: 1180px;
+  height: 310px;
+  margin-top: 69px;
+  margin-bottom: 100px;
+}
+
+.cuisine__card-container{
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal-close{
+  z-index: 1000;
+  margin-right: 1050px ;
+}
+.north-img{
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 25px;
+}
+.modal{
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  width: 1180px;
+  height: 520px;
+    top: 200px;
+    left: 500px;
+    right: 40px;
+    bottom: 40px;
+    border: 1px solid rgb(204, 204, 204);
+    background: rgb(255, 255, 255);
+    box-shadow: -5px -2.5px 10px -2.5px rgba(153, 153, 153, 0.5), 5px 10px 10px -2.5px #d2d4d7;
+    overflow: auto;
+    border-radius: 4px;
+    outline: none;
+    padding: 20px;
+    border-radius: 10px;
+    border: none;
+}
+.socials{
+  margin-top: 200px;
+  width: 100%;
+}
+.socials__container{
+  position: relative;
+  width: 100%;
+  height: 100px;
+  background-color: yellow;
+}
+
+.socials__banner{
+  width:100%
+}
+
+.highest-rated{
+  position: absolute;
+  top:-200px;
+  right:0px;
+  widows: 500px;
+  height: 500px;
+}
+
+.most-affordable{
+  position: absolute;
+  top:200px;
+  right:0px;
+  widows: 500px;
+  height: 500px;
+}
+.connect{
+  position: absolute;
+  top:600px;
+  right:0px;
+  widows: 500px;
+  height: 500px;
+}
+
+.north-indian-chinese{
+  display: flex;
+  justify-content: center;  
+  width: 100%;
 }
