--- a/client/src/components/Card/Card.scss
+++ b/client/src/components/Card/Card.scss
@@ -41,7 +41,7 @@
     text-align: center;
     border-radius: 0px 0px 40px 40px;
     font-family: sans-serif;
-    font-weight: 500;
+    font-weight: bold;
     font-size: 24px;
     margin-top: -80px;
     letter-spacing: 1px;
